--- a/Find One/Storyboard/Menu.storyboard
+++ b/Find One/Storyboard/Menu.storyboard
@@ -14,10 +14,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Side Menu View Controller-->
         <scene sceneID="E1R-w5-ZJT">
             <objects>
-                <viewController storyboardIdentifier="SideMenuViewController" automaticallyAdjustsScrollViewInsets="NO" id="qF3-vq-BV1" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SideMenuViewController" automaticallyAdjustsScrollViewInsets="NO" id="qF3-vq-BV1" customClass="SideMenuViewController" customModule="Find_One" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dWa-yA-AHY">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -481,6 +481,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zna-1l-meA">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="25"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <connections>
+                                            <action selector="logoutBtnAction:" destination="qF3-vq-BV1" eventType="touchUpInside" id="Kzu-0l-iE5"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
