--- a/Find One/Module/Home/home/Cell/CityCollectionViewCell.xib
+++ b/Find One/Module/Home/home/Cell/CityCollectionViewCell.xib
@@ -15,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BrowseCollectionViewCell" customModule="Find_One" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CityCollectionViewCell" customModule="Find_One" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="115"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -62,6 +62,10 @@
                 <constraint firstAttribute="trailing" secondItem="QVS-FF-IdH" secondAttribute="trailing" constant="2" id="7Zs-dh-W6U"/>
                 <constraint firstAttribute="bottom" secondItem="QVS-FF-IdH" secondAttribute="bottom" constant="20" id="PD5-p2-DPa"/>
             </constraints>
+            <connections>
+                <outlet property="imgView" destination="rRA-5F-iCL" id="HSL-PK-7Xe"/>
+                <outlet property="label" destination="0h7-de-kqo" id="10I-ZX-tIj"/>
+            </connections>
             <point key="canvasLocation" x="-32.061068702290072" y="19.366197183098592"/>
         </collectionViewCell>
     </objects>
