--- a/Find One/Module/Home/home/Cell/CityCollectionViewCell.xib
+++ b/Find One/Module/Home/home/Cell/CityCollectionViewCell.xib
@@ -16,63 +16,130 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CityCollectionViewCell" customModule="Find_One" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="115"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="115"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QVS-FF-IdH">
-                        <rect key="frame" x="2" y="2" width="96" height="93"/>
+                        <rect key="frame" x="2" y="2" width="146" height="148"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 405" translatesAutoresizingMaskIntoConstraints="NO" id="rRA-5F-iCL">
-                                <rect key="frame" x="0.0" y="0.0" width="96" height="93"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Riyadh" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0h7-de-kqo">
-                                <rect key="frame" x="5" y="73" width="34" height="15"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="GVr-zM-GJg"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="10"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="eNp-GP-jrQ">
+                                <rect key="frame" x="0.0" y="0.0" width="146" height="148"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRo-8D-LWd">
+                                        <rect key="frame" x="0.0" y="0.0" width="146" height="123"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 405" translatesAutoresizingMaskIntoConstraints="NO" id="rRA-5F-iCL">
+                                                <rect key="frame" x="0.0" y="0.0" width="146" height="123"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="rRA-5F-iCL" firstAttribute="leading" secondItem="SRo-8D-LWd" secondAttribute="leading" id="MMG-wa-VA0"/>
+                                            <constraint firstAttribute="trailing" secondItem="rRA-5F-iCL" secondAttribute="trailing" id="PIn-QJ-MCA"/>
+                                            <constraint firstItem="rRA-5F-iCL" firstAttribute="top" secondItem="SRo-8D-LWd" secondAttribute="top" id="WkJ-Yh-yTb"/>
+                                            <constraint firstAttribute="bottom" secondItem="rRA-5F-iCL" secondAttribute="bottom" id="bG6-Qi-a0Z"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dlJ-KZ-fpB">
+                                        <rect key="frame" x="0.0" y="123" width="146" height="25"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iZp-2y-lsr">
+                                                <rect key="frame" x="5" y="0.0" width="136" height="25"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uFo-Sp-Opp">
+                                                        <rect key="frame" x="0.0" y="0.0" width="102" height="25"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="city" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0h7-de-kqo">
+                                                                <rect key="frame" x="0.0" y="4.3333333333333428" width="22.333333333333332" height="16.666666666666668"/>
+                                                                <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="12"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstItem="0h7-de-kqo" firstAttribute="leading" secondItem="uFo-Sp-Opp" secondAttribute="leading" id="gCx-vr-8iN"/>
+                                                            <constraint firstItem="0h7-de-kqo" firstAttribute="centerY" secondItem="uFo-Sp-Opp" secondAttribute="centerY" id="i1h-Ms-czq"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ifc-j2-UHe">
+                                                        <rect key="frame" x="102" y="0.0" width="34" height="25"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+9" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o75-2F-Zdw">
+                                                                <rect key="frame" x="0.0" y="0.0" width="34" height="25"/>
+                                                                <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="10"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" priority="250" constant="25" id="8cK-b0-crc"/>
+                                                            <constraint firstAttribute="trailing" secondItem="o75-2F-Zdw" secondAttribute="trailing" id="bEO-nd-EFC"/>
+                                                            <constraint firstItem="o75-2F-Zdw" firstAttribute="top" secondItem="ifc-j2-UHe" secondAttribute="top" id="dc3-ho-ZJR"/>
+                                                            <constraint firstItem="o75-2F-Zdw" firstAttribute="leading" secondItem="ifc-j2-UHe" secondAttribute="leading" id="rn6-t3-ePY"/>
+                                                            <constraint firstAttribute="bottom" secondItem="o75-2F-Zdw" secondAttribute="bottom" id="uLM-Ah-wfq"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="iZp-2y-lsr" firstAttribute="top" secondItem="dlJ-KZ-fpB" secondAttribute="top" id="0Xd-8h-dse"/>
+                                            <constraint firstAttribute="bottom" secondItem="iZp-2y-lsr" secondAttribute="bottom" id="9Tz-Au-HRE"/>
+                                            <constraint firstItem="iZp-2y-lsr" firstAttribute="leading" secondItem="dlJ-KZ-fpB" secondAttribute="leading" constant="5" id="9n8-QO-YCW"/>
+                                            <constraint firstAttribute="trailing" secondItem="iZp-2y-lsr" secondAttribute="trailing" constant="5" id="Svr-EY-36v"/>
+                                            <constraint firstAttribute="height" constant="25" id="spq-sA-Ypz"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0h7-de-kqo" firstAttribute="leading" secondItem="QVS-FF-IdH" secondAttribute="leading" constant="5" id="2UM-qo-6An"/>
-                            <constraint firstAttribute="trailing" secondItem="rRA-5F-iCL" secondAttribute="trailing" id="LWR-FU-e6C"/>
-                            <constraint firstAttribute="bottom" secondItem="0h7-de-kqo" secondAttribute="bottom" constant="5" id="MJQ-oA-40e"/>
-                            <constraint firstItem="rRA-5F-iCL" firstAttribute="leading" secondItem="QVS-FF-IdH" secondAttribute="leading" id="XBe-nb-cGV"/>
-                            <constraint firstItem="rRA-5F-iCL" firstAttribute="top" secondItem="QVS-FF-IdH" secondAttribute="top" id="cbJ-Uz-t3E"/>
-                            <constraint firstAttribute="bottom" secondItem="rRA-5F-iCL" secondAttribute="bottom" id="fsv-Oe-iKc"/>
+                            <constraint firstItem="eNp-GP-jrQ" firstAttribute="top" secondItem="QVS-FF-IdH" secondAttribute="top" id="5cr-yj-bcj"/>
+                            <constraint firstItem="eNp-GP-jrQ" firstAttribute="leading" secondItem="QVS-FF-IdH" secondAttribute="leading" id="7eb-XR-hgE"/>
+                            <constraint firstAttribute="trailing" secondItem="eNp-GP-jrQ" secondAttribute="trailing" id="IL5-1O-IG0"/>
+                            <constraint firstAttribute="bottom" secondItem="eNp-GP-jrQ" secondAttribute="bottom" id="V7a-QD-k3a"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="ibcornerRadius">
-                                <real key="value" value="5"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" systemColor="systemGray5Color"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="QVS-FF-IdH" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="2" id="3dL-Dv-N3j"/>
                 <constraint firstItem="QVS-FF-IdH" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="2" id="3vk-da-vfZ"/>
                 <constraint firstAttribute="trailing" secondItem="QVS-FF-IdH" secondAttribute="trailing" constant="2" id="7Zs-dh-W6U"/>
-                <constraint firstAttribute="bottom" secondItem="QVS-FF-IdH" secondAttribute="bottom" constant="20" id="PD5-p2-DPa"/>
+                <constraint firstAttribute="bottom" secondItem="QVS-FF-IdH" secondAttribute="bottom" id="PD5-p2-DPa"/>
             </constraints>
             <connections>
+                <outlet property="countLabel" destination="o75-2F-Zdw" id="8KR-Zb-6bb"/>
                 <outlet property="imgView" destination="rRA-5F-iCL" id="HSL-PK-7Xe"/>
                 <outlet property="label" destination="0h7-de-kqo" id="10I-ZX-tIj"/>
             </connections>
-            <point key="canvasLocation" x="-32.061068702290072" y="19.366197183098592"/>
+            <point key="canvasLocation" x="-32.061068702290072" y="19.014084507042256"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="Rectangle 405" width="105" height="92"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
