--- a/Find One/Module/Home/home/Cell/SustainableCollectionViewCell.xib
+++ b/Find One/Module/Home/home/Cell/SustainableCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,27 +19,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="VdF-66-v6A" customClass="SustainableCollectionViewCell" customModule="Find_One" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="sustain" id="VdF-66-v6A" customClass="SustainableCollectionViewCell" customModule="Find_One" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="175" height="185"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="175" height="185"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g85-pt-1hU">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g85-pt-1hU">
                         <rect key="frame" x="2" y="0.0" width="171" height="175"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hOm-IK-XBx">
                                 <rect key="frame" x="2" y="4" width="167" height="156"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cfl-QY-oB1">
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cfl-QY-oB1">
                                         <rect key="frame" x="0.0" y="0.0" width="167" height="125"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 405" translatesAutoresizingMaskIntoConstraints="NO" id="BoB-SW-uJ7">
                                                 <rect key="frame" x="0.0" y="0.0" width="167" height="125"/>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="BoB-SW-uJ7" firstAttribute="leading" secondItem="Cfl-QY-oB1" secondAttribute="leading" id="1aB-Xm-dgK"/>
                                             <constraint firstAttribute="trailing" secondItem="BoB-SW-uJ7" secondAttribute="trailing" id="8he-8n-XYe"/>
@@ -60,10 +61,10 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="157" height="25"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="68D-Up-Kma">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="104.66666666666667" height="25"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="116.33333333333333" height="25"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yusr International" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rag-SM-UIN">
-                                                                                <rect key="frame" x="0.0" y="5.0000000000000009" width="101.33333333333333" height="15.333333333333336"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="116.33333333333333" height="25"/>
                                                                                 <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="13"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -71,12 +72,14 @@
                                                                         </subviews>
                                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                         <constraints>
+                                                                            <constraint firstItem="Rag-SM-UIN" firstAttribute="top" secondItem="68D-Up-Kma" secondAttribute="top" id="LbM-st-vUx"/>
                                                                             <constraint firstItem="Rag-SM-UIN" firstAttribute="leading" secondItem="68D-Up-Kma" secondAttribute="leading" id="ZKO-Rf-fh1"/>
-                                                                            <constraint firstItem="Rag-SM-UIN" firstAttribute="centerY" secondItem="68D-Up-Kma" secondAttribute="centerY" id="cQL-kj-9It"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="Rag-SM-UIN" secondAttribute="bottom" id="rfh-Og-0rE"/>
+                                                                            <constraint firstAttribute="trailing" secondItem="Rag-SM-UIN" secondAttribute="trailing" id="xw7-mC-pJ2"/>
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nwl-tf-7gh">
-                                                                        <rect key="frame" x="104.66666666666667" y="0.0" width="15" height="25"/>
+                                                                        <rect key="frame" x="116.33333333333333" y="0.0" width="14.999999999999986" height="25"/>
                                                                         <subviews>
                                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star" translatesAutoresizingMaskIntoConstraints="NO" id="DgZ-WJ-TWl">
                                                                                 <rect key="frame" x="0.0" y="5" width="15" height="15"/>
@@ -94,10 +97,10 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zqk-e4-u9D">
-                                                                        <rect key="frame" x="119.66666666666664" y="0.0" width="37.333333333333329" height="25"/>
+                                                                        <rect key="frame" x="131.33333333333334" y="0.0" width="25.666666666666657" height="25"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(4)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mod-vS-Rua">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="37.333333333333336" height="25"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="25.666666666666668" height="25"/>
                                                                                 <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="10"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -159,7 +162,7 @@
                                                                                         <rect key="frame" x="24" y="0.0" width="133" height="3"/>
                                                                                         <subviews>
                                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="97% Sustainable Institute" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tR6-fe-4oN">
-                                                                                                <rect key="frame" x="0.0" y="-5" width="126.33333333333333" height="13"/>
+                                                                                                <rect key="frame" x="0.0" y="-5.3333333333333428" width="120.33333333333333" height="14"/>
                                                                                                 <fontDescription key="fontDescription" name="Outfit-Medium" family="Outfit" pointSize="11"/>
                                                                                                 <color key="textColor" red="0.44705882352941173" green="0.70980392156862748" blue="0.30196078431372547" alpha="1" colorSpace="calibratedRGB"/>
                                                                                                 <nil key="highlightedColor"/>
@@ -196,7 +199,7 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="F0f-eT-8lT" secondAttribute="bottom" id="6tr-nL-htw"/>
                                             <constraint firstItem="F0f-eT-8lT" firstAttribute="leading" secondItem="2ac-6T-OK1" secondAttribute="leading" constant="5" id="8Z4-9T-g3H"/>
@@ -207,7 +210,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="hOm-IK-XBx" firstAttribute="top" secondItem="g85-pt-1hU" secondAttribute="top" constant="4" id="LNq-lV-UKc"/>
                             <constraint firstAttribute="trailing" secondItem="hOm-IK-XBx" secondAttribute="trailing" constant="2" id="a0u-ds-JwT"/>
@@ -215,16 +218,18 @@
                             <constraint firstItem="hOm-IK-XBx" firstAttribute="leading" secondItem="g85-pt-1hU" secondAttribute="leading" constant="2" id="mcp-R1-z4c"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="ibcornerRadius">
-                                <real key="value" value="15"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="addSmallColorShadow" value="YES"/>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" systemColor="systemGray5Color"/>
+                            </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="zhe-d5-Jbx"/>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="g85-pt-1hU" firstAttribute="leading" secondItem="VdF-66-v6A" secondAttribute="leading" constant="2" id="Fc1-fH-dUI"/>
                 <constraint firstItem="g85-pt-1hU" firstAttribute="top" secondItem="VdF-66-v6A" secondAttribute="top" id="Xnp-Bt-WXX"/>
@@ -247,6 +252,9 @@
         <image name="sustainable" width="19" height="16"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
