--- a/Find One/Module/SearchResult/Gallery/Cell/GalleryCollectionViewCell.xib
+++ b/Find One/Module/SearchResult/Gallery/Cell/GalleryCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -46,6 +47,9 @@
                 <constraint firstAttribute="bottom" secondItem="oDK-Hw-Xep" secondAttribute="bottom" id="aWd-TN-qQx"/>
                 <constraint firstItem="oDK-Hw-Xep" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="d9A-Wf-gpz"/>
             </constraints>
+            <connections>
+                <outlet property="imgView" destination="dq1-Sp-lQg" id="fbl-R1-rEc"/>
+            </connections>
             <point key="canvasLocation" x="138.93129770992365" y="19.718309859154932"/>
         </collectionViewCell>
     </objects>
