--- a/Find One/Module/SearchResult/Review/Cell/ReviewTableViewCell.xib
+++ b/Find One/Module/SearchResult/Review/Cell/ReviewTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -301,6 +302,16 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="WJI-XH-oTE"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <connections>
+                <outlet property="imgView" destination="esw-2R-uya" id="eBa-pA-DOJ"/>
+                <outlet property="nameLabel" destination="U2T-JH-fVh" id="d9g-CF-YEN"/>
+                <outlet property="timeLabel" destination="EdA-rt-Pgt" id="Tim-RY-1L8"/>
+                <outletCollection property="starsImgView" destination="rPP-Cm-WBb" collectionClass="NSMutableArray" id="LVF-8G-4rn"/>
+                <outletCollection property="starsImgView" destination="P05-6m-dex" collectionClass="NSMutableArray" id="Ipy-Wm-J30"/>
+                <outletCollection property="starsImgView" destination="nWC-RN-Ovd" collectionClass="NSMutableArray" id="Ykp-el-ztK"/>
+                <outletCollection property="starsImgView" destination="P0B-kT-ksy" collectionClass="NSMutableArray" id="z4v-Vr-iO4"/>
+                <outletCollection property="starsImgView" destination="enZ-ku-LKU" collectionClass="NSMutableArray" id="gVq-mF-rZY"/>
+            </connections>
             <point key="canvasLocation" x="276.3358778625954" y="106.33802816901409"/>
         </tableViewCell>
     </objects>
@@ -308,7 +319,7 @@
         <image name="Star" width="15" height="14"/>
         <image name="sana" width="64" height="64"/>
         <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
