--- a/Find One/Storyboard/Result.storyboard
+++ b/Find One/Storyboard/Result.storyboard
@@ -179,7 +179,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KJp-rv-cVK">
                                                 <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fawaq International School" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yhq-NL-q8D">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fawaq International School" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yhq-NL-q8D">
                                                         <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
                                                         <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="20"/>
                                                         <nil key="textColor"/>
@@ -496,15 +496,15 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="393" height="508"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qQ4-3c-d4l">
-                                                                <rect key="frame" x="0.0" y="0.0" width="393" height="567"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="393" height="577"/>
                                                                 <subviews>
-                                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wZ9-qE-wNc">
-                                                                        <rect key="frame" x="15" y="0.0" width="363" height="567"/>
+                                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="wZ9-qE-wNc">
+                                                                        <rect key="frame" x="15" y="0.0" width="363" height="577"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DX4-VI-Hi8">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="363" height="100"/>
                                                                                 <subviews>
-                                                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="c4q-TA-qoe">
+                                                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="c4q-TA-qoe">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="363" height="100"/>
                                                                                         <subviews>
                                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CQ9-g3-TIa">
@@ -645,7 +645,7 @@
                                                                                 </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qjC-jf-Y6S">
-                                                                                <rect key="frame" x="0.0" y="110" width="363" height="457"/>
+                                                                                <rect key="frame" x="0.0" y="120" width="363" height="457"/>
                                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="height" priority="250" constant="457" id="Bvf-Fg-AJA"/>
@@ -823,16 +823,16 @@
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOK-iz-WGF">
-                                                <rect key="frame" x="0.0" y="0.0" width="393" height="796.66666666666663"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="776.66666666666663"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="YUJ-o8-jzK">
-                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="796.66666666666663"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="776.66666666666663"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vfx-m6-LNI">
-                                                                <rect key="frame" x="0.0" y="0.0" width="393" height="165"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="393" height="145"/>
                                                                 <subviews>
-                                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PyF-KT-YeR">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="165"/>
+                                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="PyF-KT-YeR">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="145"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="64y-Bh-WQk">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="25"/>
@@ -854,7 +854,7 @@
                                                                                 </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oG1-5O-IkX">
-                                                                                <rect key="frame" x="0.0" y="45" width="393" height="50"/>
+                                                                                <rect key="frame" x="0.0" y="35" width="393" height="50"/>
                                                                                 <subviews>
                                                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="11R-tC-0zO">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
@@ -1054,7 +1054,7 @@
                                                                                 </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BNU-Ov-wtd">
-                                                                                <rect key="frame" x="0.0" y="115" width="393" height="50"/>
+                                                                                <rect key="frame" x="0.0" y="95" width="393" height="50"/>
                                                                                 <subviews>
                                                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dCL-fs-AXd">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
@@ -1270,7 +1270,7 @@
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h6X-ju-vTx">
-                                                                <rect key="frame" x="0.0" y="185.00000000000003" width="393" height="321.66666666666674"/>
+                                                                <rect key="frame" x="0.0" y="165.00000000000003" width="393" height="321.66666666666674"/>
                                                                 <subviews>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Pt0-y5-qAO">
                                                                         <rect key="frame" x="0.0" y="0.0" width="393" height="321.66666666666669"/>
@@ -1328,7 +1328,7 @@
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tBG-2n-ZON">
-                                                                <rect key="frame" x="0.0" y="526.66666666666663" width="393" height="270"/>
+                                                                <rect key="frame" x="0.0" y="506.66666666666663" width="393" height="270"/>
                                                                 <subviews>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="uRx-x7-yz2">
                                                                         <rect key="frame" x="0.0" y="0.0" width="393" height="270"/>
